# AndroidManagementQt

./: CMakeLists.txt  README.md
cmake/modules/: android-management-config.cmake.in
src/: CMakeLists.txt  androidmanagement.cpp  androidmanagement.h  androidmanagementexports.h  androidmanagementpolicy.cpp  androidmanagementpolicy.h  googlecloudoauth2.cpp  googlecloudoauth2.h
